add basic style

--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-<h1>zhangxue profile</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<style>
+
+.baseSection {
+
+}
+
+.particularLeft {
+    border: 1px outset gray;
+    background-color: lightblue;
+    text-align: left;
+    width: 50%;
+    float: left;
+}
+.particularRight {
+    border: 1px outset gray;
+    background-color: lightblue;
+    width: 49.7%;
+    float: right;
+}
+</style>
+
+    <head>
+        <title>profile</title>
+    </head>
+
+
+    <body>
+        <div class="baseSection">
+            <h1 style="text-align: center;">Zhang Xue</h1>
+        </div>
+        <div class="baseSection">
+            <h2>personal particulars</h2>
+            <div class="particularLeft">
+                <p>
+                    <i><label style="width: 20px">Email:</label>sturyzzzzz@gmail.com</i><br>
+                    <i><label style="width: 20px">Gender:</label>male</i><br>
+                    <i><label style="width: 20px">Location:</label>Singapore</i>
+                </p>
+            </div>
+            <div class="particularRight">
+                <p>
+                    <i>Phone:sturyzzzzz@gmail.com</i><br>
+                    <i>gender:male</i><br>
+                    <i>base:Singapore</i>
+                </p>
+            </div>
+        </div>
+    </body>
+
+</html>
